# NetiKat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
plots/: plot.py  sparse_matrix_data.tsv  sparse_vector_data.tsv
src/: CMakeLists.txt  TransitionMatrix.cpp  TransitionMatrix.h  benchmark.cpp  benchmark.h  benchmark.ipp  linear_algebra_utilities.cpp  linear_algebra_utilities.h  linear_algebra_utilities.ipp  main.cpp  netikat.cpp  netikat.h  netikat.ipp  template_magic.h  utils.cpp  utils.h  utils.ipp
src/tests/: CMakeLists.txt  NetikatTest.h  SampleTest.h  TransitionMatrixTest.h  test.cpp  test_utils.h
